--- a/index.html
+++ b/index.html
@@ -26,15 +26,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet">
     <!-- 부트스트랩 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style.css">
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/app.js"></script>
     <!-- typeit CDN -->
     <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js"></script>
 
 </head>
 
@@ -55,9 +60,7 @@
     </header>
 
     <main id="Home">
-        <article 
-            data-aos="fade-left"
-            data-aos-duration="3000" >
+        <article data-aos="fade-left" data-aos-duration="3000">
             <header>
                 <h1></h1>
             </header>
@@ -66,30 +69,74 @@
     </main>
     <!--Home 섹션-->
 
-    <div class="mask-color-filter">
-        <section id="About">
-            
-        </section>
-        <article class="About"
-            data-aos="fade-right"
-            data-aos-duration="3000" >
-            <header>
-                <h1>웹 퍼블리셔 최원빈입니다.</h1>
-            </header>
-            <p>매일매일 성장하고 있는 웹 퍼블리셔 전혜린입니다.
-                "성실함을 이기는 것은 없다"는 마음가짐으로 기술 블로그에 공부 기록을 꾸준히 하여
-                새롭게 배운 내용은 내 것으로 만들고자 노력하고 있습니다.
-                또한 협업에 필요한 깃허브의 Git 명령어를 학습하였으며 항상 커밋하는 습관을 들여
-                약 5개월간 1,000건 이상의 commit 경험이 있습니다.
-                저에게 퍼블리싱은 제가 하고 싶은 일이 무엇인지 깨닫게 해준 직무입니다.
-                이 열정으로 꾸준히 노력하여 늘 발전하는 웹 퍼블리셔가 되겠습니다.</p>
-        </article>
-    </div>
-    <!--About 섹션-->
-    <section id="Work">
 
+    <section id="About">
+        <div class="first-floor">
+            <div class="mask-color-filter">
+                <div class="profile-clip"></div>
+            </div>
+            <article class="intro" data-aos="fade-right" data-aos-duration="3000">
+                <header>
+                    <h1><span>저는</span><br>탄탄한 UI와<br>인상적인 UX를 만드는 <br><strong>웹 퍼블리셔</strong>입니다.</h1>
+                </header>
+                <p>저는 신입 웹퍼블리셔 최원빈입니다. <br>
+                    쉽고, 재밌고, 신선하게 표현하는걸 좋아합니다.</p>
+                <p>탄탄한 코드 위에 감각적인 UI를 그려냅니다.<br> CSS와 JavaScript를 활용한 동적 모션을 좋아하고,<br>
+                    컴포넌트 단위의 유지보수에 최적화된 마크업에 관심이 많습니다.<br>
+                    사용자 입장에서 생각하는 걸 좋아해서 계속 고민하며 더 나은 방향에 대해 사람들과 얘기 나누곤 합니다.<br>
+                    프로덕트가 사용자들의 기억에 남도록 하는 게 저의 일입니다.</p>
+                <p>좋아하는 일을 하면서 잘 하는 것, <br> 그것이 제 꿈속에 있는 최원빈의 모습입니다.</p>
+            </article>
+        </div>
+
+        <div class="second-floor">
+            <div class="skill-title">
+                <h2>제가 자신있는 기술들입니다.</h2>
+            </div>
+            <ul class="skill">
+                <li>
+                    <h3>UX / UI Development</h3>
+                    <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.<br>
+                    </p>
+                </li>
+                <li>
+                    <h3></h3>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!--About 섹션-->
+
+
+
+    <section id="Work">
+        <ul class="work-list">
+            <li>PC 사이트</li>
+            <li>Mobile 사이트</li>
+            <li>반응형 웹</li>
+            <li>기타</li>
+        </ul>
+        <div class="swiper workslider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="images/nature-1.jpeg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="images/nature-2.jpeg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="images/nature-3.jpeg" alt="">
+                </div>
+
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
     </section>
     <!--Work 섹션-->
+
+
+
+
     <section id="Contact">
 
     </section>
@@ -97,7 +144,7 @@
 
 
 
-    
+
 </body>
 
 </html>
