--- a/index.html
+++ b/index.html
@@ -39,112 +39,147 @@
 
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pc.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 767px)">
     <script src="js/app.js"></script>
 
 </head>
 
 <body>
-    <header id="main-header">
-        <div class="logo">
-            <a href="index.html">최 원빈</a>
-        </div>
-        <nav>
-            <ul id="menu">
-                <li class="idc-home on"><a href="#Home">Home</a></li>
-                <li class="idc-about"><a href="#About">About me</a></li>
-                <li class="idc-work"><a href="#Work">Work</a></li>
-                <li class="idc-contact"><a href="#Contact">Contact</a></li>
-                <li><a href="https://github.com/wb96choi">github</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main id="Home">
-        <article data-aos="fade-left" data-aos-duration="3000">
-            <header>
-                <h1></h1>
-            </header>
-            <p></p>
-        </article>
-    </main>
-    <!--Home 섹션-->
-
-
-    <section id="About">
-        <div class="first-floor">
-            <div class="mask-color-filter">
-                <div class="profile-clip"></div>
+    <div class="wrap">
+        <header id="main-header">
+            <div class="logo">
+                <a href="index.html">최 원빈</a>
             </div>
-            <article class="intro" data-aos="fade-right" data-aos-duration="3000">
+            <nav>
+                <ul id="menu">
+                    <li class="idc-home on"><a href="#Home">Home</a></li>
+                    <li class="idc-about"><a href="#About">About me</a></li>
+                    <li class="idc-work"><a href="#Work">Work</a></li>
+                    <li class="idc-contact"><a href="#Contact">Contact</a></li>
+                    <li><a href="https://github.com/wb96choi">github</a></li>
+                </ul>
+            </nav>
+            <div id="toggle-menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <div id="mobile-toggle-menu">
+                <ul class="gnb">
+                    <li class="idc-home on"><a href="#Home">Home</a></li>
+                    <li class="idc-about"><a href="#About">About me</a></li>
+                    <li class="idc-work"><a href="#Work">Work</a></li>
+                    <li class="idc-contact"><a href="#Contact">Contact</a></li>
+                    <li><a href="https://github.com/wb96choi">github</a></li>
+                </ul>
+            </div>
+        </header>
+
+        <main id="Home">
+            <article data-aos="fade-left" data-aos-duration="3000">
                 <header>
-                    <h1><span>저는</span><br>탄탄한 UI와<br>인상적인 UX를 만드는 <br><strong>웹 퍼블리셔</strong>입니다.</h1>
+                    <h1></h1>
                 </header>
-                <p>저는 신입 웹퍼블리셔 최원빈입니다. <br>
-                    쉽고, 재밌고, 신선하게 표현하는걸 좋아합니다.</p>
-                <p>탄탄한 코드 위에 감각적인 UI를 그려냅니다.<br> CSS와 JavaScript를 활용한 동적 모션을 좋아하고,<br>
-                    컴포넌트 단위의 유지보수에 최적화된 마크업에 관심이 많습니다.<br>
-                    사용자 입장에서 생각하는 걸 좋아해서 계속 고민하며 더 나은 방향에 대해 사람들과 얘기 나누곤 합니다.<br>
-                    프로덕트가 사용자들의 기억에 남도록 하는 게 저의 일입니다.</p>
-                <p>좋아하는 일을 하면서 잘 하는 것, <br> 그것이 제 꿈속에 있는 최원빈의 모습입니다.</p>
+                <p></p>
             </article>
-        </div>
+        </main>
+        <!--Home 섹션-->
 
-        <div class="second-floor">
-            <div class="skill-title">
-                <h2>제가 자신있는 기술들입니다.</h2>
+
+        <section id="About">
+            <div class="first-floor">
+                <div class="mask-color-filter">
+                    <div class="profile-clip"></div>
+                </div>
+                <article class="intro" data-aos="fade-right" data-aos-duration="3000">
+                    <header>
+                        <h1><span>저는</span><br>탄탄한 UI와<br>인상적인 UX를 만드는 <br><strong>웹 퍼블리셔</strong>입니다.</h1>
+                    </header>
+                    <p>저는 신입 웹퍼블리셔 최원빈입니다. <br>
+                        쉽고, 재밌고, 신선하게 표현하는걸 좋아합니다.</p>
+                    <p>탄탄한 코드 위에 감각적인 UI를 그려냅니다.<br> CSS와 JavaScript를 활용한 동적 모션을 좋아하고,<br>
+                        컴포넌트 단위의 유지보수에 최적화된 마크업에 관심이 많습니다.<br>
+                        사용자 입장에서 생각하는 걸 좋아해서 계속 고민하며 더 나은 방향에 대해 사람들과 얘기 나누곤 합니다.<br>
+                        프로덕트가 사용자들의 기억에 남도록 하는 게 저의 일입니다.</p>
+                    <p>좋아하는 일을 하면서 잘 하는 것, <br> 그것이 제 꿈속에 있는 최원빈의 모습입니다.</p>
+                </article>
             </div>
-            <ul class="skill">
-                <li>
-                    <h3>UX / UI Development</h3>
-                    <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.<br>
-                    </p>
-                </li>
-                <li>
-                    <h3></h3>
-                </li>
+
+            <div class="second-floor">
+                <div class="skill-title">
+                    <h2>제가 자신있는 기술들입니다.</h2>
+                </div>
+                <ul class="skill">
+                    <li>
+                        <h3>UX / UI Development</h3>
+                        <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.<br>
+                        </p>
+                    </li>
+                    <li>
+                        <h3>UX / UI Development</h3>
+                        <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.<br>
+                        </p>
+                    </li>
+                    <li>
+                        <h3>UX / UI Development</h3>
+                        <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.<br>
+                        </p>
+                    </li>
+                    <li>
+                        <h3>UX / UI Development</h3>
+                        <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.<br>
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--About 섹션-->
+
+
+
+        <section id="Work">
+            <ul class="work-list">
+                <li class="on">PC 사이트</li>
+                <li>Mobile 사이트</li>
+                <li>반응형 웹</li>
+                <li>기타</li>
             </ul>
-        </div>
-    </section>
-    <!--About 섹션-->
-
-
-
-    <section id="Work">
-        <ul class="work-list">
-            <li>PC 사이트</li>
-            <li>Mobile 사이트</li>
-            <li>반응형 웹</li>
-            <li>기타</li>
-        </ul>
-        <div class="swiper workslider">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img src="images/nature-1.jpeg" alt="">
+            <div class="work-contents">
+                <div class="con">
+                    <a href="https://wb96choi.github.io/hyein_bin/"></a>
+                    <div class="detail">
+                        <button id="readme">
+                            README
+                        </button>
+                        <button id="gotogit">
+                            Github
+                        </button>
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                    <img src="images/nature-2.jpeg" alt="">
+                <div class="con">
+                    <a href="https://wb96choi.github.io/hyein_bin/"></a>
                 </div>
-                <div class="swiper-slide">
-                    <img src="images/nature-3.jpeg" alt="">
+                <div class="con">
+                    <a href="https://wb96choi.github.io/hyein_bin/"></a>
                 </div>
-
-                <div class="swiper-pagination"></div>
             </div>
-        </div>
-    </section>
-    <!--Work 섹션-->
+
+        </section>
+        <!--Work 섹션-->
 
 
 
 
-    <section id="Contact">
+        <section id="Contact">
 
-    </section>
-    <!--Contact 섹션-->
-
-
+        </section>
+        <!--Contact 섹션-->
 
 
+
+    </div>
 </body>
 
 </html>
