ㄴㅐ일 contact섹션이랑 json할지말지고민하기

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 </head>
 
 <body>
+    <div class="mousepointer"></div>
     <div class="wrap">
         <header id="main-header">
             <div class="logo">
@@ -146,26 +147,145 @@
                 <li>반응형 웹</li>
                 <li>기타</li>
             </ul>
-            <div class="work-contents">
-                <div class="con">
-                    <a href="https://wb96choi.github.io/hyein_bin/"></a>
-                    <div class="detail">
-                        <button id="readme">
-                            README
-                        </button>
-                        <button id="gotogit">
-                            Github
-                        </button>
+            <div class="work-contents pc-site on">
+                <div class="container">
+                    <div class="row">
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="con">
-                    <a href="https://wb96choi.github.io/hyein_bin/"></a>
+            </div>
+            <div class="work-contents mobile-site">
+                <div class="container">
+                    <div class="row">
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="con">
-                    <a href="https://wb96choi.github.io/hyein_bin/"></a>
+            </div>
+            <div class="work-contents responsive">
+                <div class="container">
+                    <div class="row">
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="work-contents etc-site">
+                <div class="container">
+                    <div class="row">
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                        <div class="con">
+
+                            <div class="detail">
+                                자세히 보기
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
+            <div class="modal-shadow">
+                <div id="work-modal">
+                    <header>
+                        <button id="close"><i class="bi bi-x"></i></button>
+                    </header>
+                    <article>
+                        <div class="left-side">
+                            <div class="thumbnail">
+                                <img src="images/AppleiMac.png" alt="imac">
+                            </div>
+                        </div>
+                        <div class="right-side">
+                            <div class="work-info">
+                                <span>
+                                    <h2>프로젝트 개요</h2>
+                                    <p>프로젝트 개요입니다.</p>
+                                </span>
+                                <span>
+                                    <h2>작업기간</h2>
+                                    <p>2022.8.23 ~ 2022.8.24</p>
+                                </span>
+                                <span>
+                                    <h2>작업기여도</h2>
+                                    <p>기여도 100% (개인작업)</p>
+                                </span>
+                                <span>
+                                    <h2>사용기술</h2>
+                                    <p>HTML CSS Javascript jQuery Photoshop</p>
+                                </span>
+                            </div>
+                            <div class="detail-btn-group">
+                                <button id="readme">
+                                    README
+                                </button>
+                                <button id="gotogit">
+                                    Github
+                                </button>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </section>
         <!--Work 섹션-->
 
