본체에서 이식

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
     <!-- swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-
+    <!-- 원형 프로그레스바 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js" integrity="sha512-6kvhZ/39gRVLmoM/6JxbbJVTYzL/gnbDVsHACLx/31IREU4l3sI7yeO0d4gw8xU5Mpmm/17LMaDHOCf+TvuC2Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/pc.css" media="screen and (min-width: 768px)">
@@ -101,20 +101,20 @@
                 </div>
                 <article class="intro" data-aos="fade-right" data-aos-duration="3000">
                     <header>
-                        <h1><span>저는</span><br>탄탄한 UI와<br>인상적인 UX를 만드는 <br><strong>웹 퍼블리셔</strong>입니다.</h1>
+                        <h1>탄탄한 UI와 인상적인 UX를 만드는 웹 퍼블리셔 최원빈입니다.</h1>
                     </header>
-                    <p>저는 신입 웹퍼블리셔 최원빈입니다. <br>
+                    <!-- <p>저는 신입 웹퍼블리셔 최원빈입니다. <br>
                         쉽고, 재밌고, 신선하게 표현하는걸 좋아합니다.</p>
                     <p>탄탄한 코드 위에 감각적인 UI를 그려냅니다.<br> CSS와 JavaScript를 활용한 동적 모션을 좋아하고,<br>
                         컴포넌트 단위의 유지보수에 최적화된 마크업에 관심이 많습니다.<br>
                         사용자 입장에서 생각하는 걸 좋아해서 계속 고민하며 더 나은 방향에 대해 사람들과 얘기 나누곤 합니다.<br>
                         프로덕트가 사용자들의 기억에 남도록 하는 게 저의 일입니다.</p>
-                    <p>좋아하는 일을 하면서 잘 하는 것, <br> 그것이 제 꿈속에 있는 최원빈의 모습입니다.</p>
+                    <p>좋아하는 일을 하면서 잘 하는 것, <br> 그것이 제 꿈속에 있는 최원빈의 모습입니다.</p> -->
                 </article>
             </div>
 
             <div class="second-floor">
-                <div class="skill-title">
+                <!-- <div class="skill-title">
                     <h2>제가 자신있는 기술들입니다.</h2>
                     <ul>
                         <li><img src="images/html5-icon.png" alt="HTML5"></li>
@@ -146,7 +146,72 @@
                         <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.<br>
                         </p>
                     </li>
-                </ul>
+                </ul> -->
+
+                <div class="container">
+                    <div class="skill-title" data-aos="fade-down" data-aos-duration="3000">
+                        <h2>SKILLS</h2>
+                        <p>제가 자신있는 기술들입니다.</p>
+                    </div>
+                    <ul class="skill">
+                        <li data-aos="fade-up" data-aos-duration="3000">
+                            <header>
+                                <div class="skill-icon">
+                                    <img src="images/html5-icon.png" alt="HTML5">
+                                    <div class="progress"></div>
+                                </div>
+                            </header>
+                            <div class="skill-name">
+                                <h3>HTML</h3>
+                            </div>
+                            <div class="skill-info">
+                                <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.</p>
+                            </div>
+                        </li>
+                        <li data-aos="fade-up" data-aos-duration="2000">
+                            <header>
+                                <div class="skill-icon">
+                                    <img src="images/html5-icon.png" alt="HTML5">
+                                    <div class="progress"></div>
+                                </div>
+                            </header>
+                            <div class="skill-name">
+                                <h3>HTML</h3>
+                            </div>
+                            <div class="skill-info">
+                                <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.</p>
+                            </div>
+                        </li>
+                        <li data-aos="fade-up" data-aos-duration="1000">
+                            <header>
+                                <div class="skill-icon">
+                                    <img src="images/html5-icon.png" alt="HTML5">
+                                    <div class="progress"></div>
+                                </div>
+                            </header>
+                            <div class="skill-name">
+                                <h3>HTML</h3>
+                            </div>
+                            <div class="skill-info">
+                                <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.</p>
+                            </div>
+                        </li>
+                        <li data-aos="fade-up" data-aos-duration="0">
+                            <header>
+                                <div class="skill-icon">
+                                    <img src="images/html5-icon.png" alt="HTML5">
+                                    <div class="progress"></div>
+                                </div>
+                            </header>
+                            <div class="skill-name">
+                                <h3>HTML</h3>
+                            </div>
+                            <div class="skill-info">
+                                <p>HTML, CSS, Javascript를 이해하며 잘 다룰 수 있습니다.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <!--About 섹션-->
