--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@
 
 
 
-
+        <div id="particles-js"></div>
         <section id="Contact">
 
             <!-- particles.js container -->
-            <div id="particles-js"></div> <!-- stats - count particles -->
+            
 
             <div class="thx">
                 <h3>방문해 주셔서 감사합니다.</h3>
