--- a/index.html
+++ b/index.html
@@ -230,18 +230,18 @@
                             <article>
                                 <div class="left-side">
                                     <div class="thumbnail">
-                                        <img src="images/AppleiMac.png" alt="imac">
+                                        <img src="nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
                                     </div>
                                 </div>
                                 <div class="right-side">
                                     <div class="work-info">
                                         <span>
-                                            <h2>111111111프로젝트 개요</h2>
-                                            <p>프로젝트 개요입니다.</p>
+                                            <h2>프로젝트 개요</h2>
+                                            <p>기존의 니시무라 중공업 사이트를 <br>리뉴얼했습니다.</p>
                                         </span>
                                         <span>
                                             <h2>작업기간</h2>
-                                            <p>2022.8.23 ~ 2022.8.24</p>
+                                            <p>2022.8.15 ~ 2022.8.20</p>
                                         </span>
                                         <span>
                                             <h2>작업기여도</h2>
@@ -357,8 +357,8 @@
 
                 </div>
 
-                <div class="swiper-button-prev" id="swiper-btn"></div>
-                <div class="swiper-button-next" id="swiper-btn"></div>
+                <div class="swiper-button-prev" id="swiper-btn-left"></div>
+                <div class="swiper-button-next" id="swiper-btn-right"></div>
             </div>
             <div class="work-contents pc-site">
 
