색상정해보기

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                 <div class="bar-deco-right" data-aos="slide-left" data-aos-duration="1000">
 
                 </div>
-                <div class="bar-deco-left" data-aos="slide-right" data-aos-duration="2000">
+                <!-- <div class="bar-deco-left" data-aos="slide-right" data-aos-duration="2000">
 
-                </div>
+                </div> -->
                 <div class="container">
                     <div class="skill-title" data-aos="fade-down" data-aos-duration="3000">
                         <h2>SKILLS</h2>
