--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                     <article>
                                         <div class="left-side">
                                             <div class="thumbnail">
-                                                <img src="nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
+                                                <img src="work-image/nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
                                             </div>
                                         </div>
                                         <div class="right-side">
@@ -278,8 +278,7 @@
                                             </div>
                                             <div class="detail-btn-group">
                                                 <button id="readme">
-
-
+                                                    상세보기
                                                 </button>
                                                 <button id="gotogit">
                                                     <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
@@ -535,35 +534,34 @@
                                     <article>
                                         <div class="left-side">
                                             <div class="thumbnail">
-                                                <img src="nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
+                                                <img src="work-image/at.png" alt="오디오테크니카 리뉴얼사이트 썸네일">
                                             </div>
                                         </div>
                                         <div class="right-side">
                                             <div class="work-info">
                                                 <span>
                                                     <h2>프로젝트 개요</h2>
-                                                    <p>기존의 니시무라 중공업 사이트를 <br>리뉴얼했습니다.</p>
+                                                    <p>기존의 오디오테크니카 사이트를 <br>모바일 웹용으로 리뉴얼했습니다.</p>
                                                 </span>
                                                 <span>
                                                     <h2>작업기간</h2>
-                                                    <p>2022.8.15 ~ 2022.8.20</p>
+                                                    <p>2022.7.15 ~ 2022.7.29</p>
                                                 </span>
                                                 <span>
                                                     <h2>작업기여도</h2>
-                                                    <p>기여도 100% (개인작업)</p>
+                                                    <p>기여도 60% (코딩 및 팀원 자료 취합)</p>
                                                 </span>
                                                 <span>
                                                     <h2>사용기술</h2>
-                                                    <p>HTML CSS Javascript jQuery Photoshop</p>
+                                                    <p>jQuery swiper플러그인 Photoshop</p>
                                                 </span>
                                             </div>
                                             <div class="detail-btn-group">
                                                 <button id="readme">
-
-
+                                                    상세보기
                                                 </button>
                                                 <button id="gotogit">
-                                                    <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
+                                                    <a href="https://wb96choi.github.io/audio_techinica_teamproject/">Github</a>
 
                                                 </button>
                                             </div>
@@ -808,7 +806,8 @@
 
                     <div class="modal-shadow">
                         <div id="work-modal">
-                            <img src="detailpage.jpg" alt="">
+                            <img class="nisimura" src="work-image/nisimura-detailpage.jpg" alt="니시무라 상세보기">
+                            <img class="audiotech" src="work-image/at.png" alt="오디오테크니카 상세보기">
                         </div>
                     </div>
 
