--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                     <div class="modal-shadow">
                         <div id="work-modal">
                             <img class="nisimura" src="work-image/nisimura-detailpage.jpg" alt="니시무라 상세보기">
-                            <img class="audiotech" src="work-image/at.png" alt="오디오테크니카 상세보기">
+                            <img class="audiotech" src="work-image/at-detailpage.jpg" alt="오디오테크니카 상세보기">
                         </div>
                     </div>
 
