--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <link rel="stylesheet" href="css/pc.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 767px)">
     <script src="js/app.js"></script>
+    <script media="screen and (max-width: 767px)" src="js/mobile-app.js"></script>
 
 </head>
 
