모바일사이즈수정

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     <link rel="stylesheet" href="css/pc.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 767px)">
     <script src="js/app.js"></script>
-    <script media="screen and (max-width: 767px)" src="js/mobile-app.js"></script>
 
 </head>
 
@@ -89,8 +88,8 @@
 
         <main id="Home">
             <article>
-                <h1>천재는 만들어진다.</h1>
-                <h2>안녕하세요. 만들어진 천재 최원빈입니다.</h2>
+                <h1>노력하는 사람에겐 행운이 따라온다.</h1>
+                <h2>안녕하세요. 운좋은 웹퍼블리셔 최원빈입니다.</h2>
             </article>
         </main>
 
@@ -395,7 +394,7 @@
                                     <article>
                                         <div class="left-side">
                                             <div class="thumbnail">
-                                                <img src="nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
+                                                <img src="work-image/nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
                                             </div>
                                         </div>
                                         <div class="right-side">
@@ -663,7 +662,7 @@
                                     <article>
                                         <div class="left-side">
                                             <div class="thumbnail">
-                                                <img src="nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
+                                                <img src="work-image/nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
                                             </div>
                                         </div>
                                         <div class="right-side">
