--- a/index.html
+++ b/index.html
@@ -301,22 +301,22 @@
                                     <article>
                                         <div class="left-side">
                                             <div class="thumbnail">
-                                                <img src="images/AppleiMac.png" alt="imac">
+                                                <img src="work-image/seongnam.png" alt="성남아트센터 리뉴얼사이트">
                                             </div>
                                         </div>
                                         <div class="right-side">
                                             <div class="work-info">
                                                 <span>
-                                                    <h2>2222222222프로젝트 개요</h2>
-                                                    <p>프로젝트 개요입니다.</p>
+                                                    <h2>프로젝트 개요</h2>
+                                                    <p>성남아트센터를<br>리뉴얼했습니다.</p>
                                                 </span>
                                                 <span>
                                                     <h2>작업기간</h2>
-                                                    <p>2022.8.23 ~ 2022.8.24</p>
+                                                    <p>2022.8.3 ~ 2022.8.26</p>
                                                 </span>
                                                 <span>
                                                     <h2>작업기여도</h2>
-                                                    <p>기여도 100% (개인작업)</p>
+                                                    <p>기여도 40% (코딩 및 팀원 자료 취합)</p>
                                                 </span>
                                                 <span>
                                                     <h2>사용기술</h2>
@@ -325,11 +325,10 @@
                                             </div>
                                             <div class="detail-btn-group">
                                                 <button id="readme">
-                                                    <a href="https://github.com/wb96choi/hyein_bin">README</a>
-
+                                                    상세보기
                                                 </button>
                                                 <button id="gotogit">
-                                                    <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
+                                                    <a href="https://github.com/wb96choi/seongnam_team">Github</a>
 
                                                 </button>
                                             </div>
@@ -793,6 +792,7 @@
                         <div id="work-modal">
                             <img class="nisimura" src="work-image/nisimura-detailpage.jpg" alt="니시무라 상세보기">
                             <img class="audiotech" src="work-image/at-detailpage.jpg" alt="오디오테크니카 상세보기">
+                            <img class="seongnam" src="work-image/seongnam-detailpage.jpg" alt="성남아트센터 상세보기">
                         </div>
                     </div>
 
