마우스커서

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                             <article>
                                 <div class="left-side">
                                     <div class="thumbnail">
-                                        <img src="work-image/nisimura.png" alt="니시무라 중공업 리뉴얼사이트 썸네일">
+                                        <iframe src="https://wb96choi.github.io/real_bmoproject/" width="100%" frameborder="0"></iframe>
                                     </div>
                                 </div>
                                 <div class="right-side">
