--- a/index.html
+++ b/index.html
@@ -644,41 +644,7 @@
                         <div id="contents-wrapper">
 
                             <article>
-                                <div class="left-side">
-                                    <div class="thumbnail">
-                                        <iframe src="https://wb96choi.github.io/real_bmoproject/" width="100%" frameborder="0"></iframe>
-                                    </div>
-                                </div>
-                                <div class="right-side">
-                                    <div class="work-info">
-                                        <span>
-                                            <h2>프로젝트 개요</h2>
-                                            <p>기존의 니시무라 중공업 사이트를 <br>리뉴얼했습니다.</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기간</h2>
-                                            <p>2022.8.15 ~ 2022.8.20</p>
-                                        </span>
-                                        <span>
-                                            <h2>작업기여도</h2>
-                                            <p>기여도 100% (개인작업)</p>
-                                        </span>
-                                        <span>
-                                            <h2>사용기술</h2>
-                                            <p>HTML CSS Javascript jQuery Photoshop</p>
-                                        </span>
-                                    </div>
-                                    <div class="detail-btn-group">
-                                        <button id="readme">
-
-
-                                        </button>
-                                        <button id="gotogit">
-                                            <a href="https://wb96choi.github.io/hyein_bin/">Github</a>
-
-                                        </button>
-                                    </div>
-                                </div>
+                                <iframe src="https://wb96choi.github.io/real_bmoproject/"></iframe>
                             </article>
                         </div>
                     </div>
