--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
 
 
         <main id="Home">
+           <!-- <img src="images/profile_bg.svg" alt=""> -->
             <article>
                 <h1>노력하는 사람에겐 행운이 따라온다.</h1>
-                <h2>안녕하세요. 운좋은 웹퍼블리셔 최원빈입니다.</h2>
+                <h2>안녕하세요. <br>운좋은 웹퍼블리셔 최원빈입니다.</h2>
             </article>
         </main>
 
@@ -90,7 +91,16 @@
         <section id="About">
             <div class="first-floor">
                 <div class="mask-color-filter">
-                    <div class="profile-clip"></div>
+                    <div class="profile-clip">
+                        <div class="eyes">
+                            <div class="on">
+                                <div class="me"></div>
+                            </div>
+                            <div class="on">
+                                <div class="me"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <article class="intro" data-aos="fade-left" data-aos-duration="3000">
                     <section data-aos="fade-left" data-aos-duration="1000" data-aos-delay="0">
