--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@
             <div class="first-floor">
                 <div class="mask-color-filter">
                     <div class="profile-clip">
+                        <img src="images/profile_bg.png" alt="">
                         <div class="eyes">
                             <div class="on">
                                 <div class="me"></div>
