--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 사이트명(title) -->
     <meta name="og:site_name" content="최원빈의 포트폴리오" />
     <!-- 웹사이트 대표 이미지(썸네일) -->
-    <meta name="og:image" content="site_thumbnail.jpg" />
+    <meta name="og:image" content="site_thumbnail.jpg" href="site_thumbnail.jpg"/>
     <title>최원빈의 포트폴리오</title>
 
     <!-- 아이콘 등록 -->
