--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <main id="Home">
             <svg id="profile" version="1.0" xmlns="http://www.w3.org/2000/svg"
-            width="100vw" height="100vh" viewBox="0 0 1920.000000 1080.000000"
+            height="100%" viewBox="0 0 1920.000000 1080.000000"
             preserveAspectRatio="xMidYMid meet">
            
            <g class="main-text" transform="translate(0.000000,1080.000000) scale(0.100000,-0.100000)"
