--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
                         <div id="contents-wrapper">
 
                             <article>
-                                <iframe src="https://wb96choi.github.io/real_bmoproject/"></iframe>
+                                <iframe width="100%" src="https://wb96choi.github.io/real_bmoproject/"></iframe>
                             </article>
                         </div>
                     </div>
