끝까지 가면 할 수 있어

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <div class="first-floor">
                 <div class="mask-color-filter">
                     <div class="profile-clip">
-                        <img src="images/profile_bg.png" alt="">
+                        <img src="images/profile.png" alt="">
                         <div class="eyes">
                             <div class="on">
                                 <div class="me"></div>
@@ -1122,6 +1122,7 @@
 
                             <article>
                                 <iframe width="100%" src="https://wb96choi.github.io/real_bmoproject/"></iframe>
+                                <div class="detail"><a href="https://github.com/wb96choi/real_bmoproject">자세히 보기</a></div>
                             </article>
                         </div>
                     </div>
